feat: setting darkMode function

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 * {
-  font-family: 'Prompt', sans-serif;
+  font-family: "Prompt", sans-serif;
 }
+
+@custom-variant dark (&:where (.dark, .dark *))
