--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,4 @@
   font-family: "Prompt", sans-serif;
 }
 
-@custom-variant dark (&:where (.dark, .dark *))
+@custom-variant dark (&:where(.dark, .dark *));
